# minner

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  Vagrantfile  cmake_install.cmake  cmake_run.sh  gcc_run.sh  main.cpp  nf_ebot_scrapers.cbp
app/: main.cpp
app/include/parsers/: general.h  nfe_fazenda_avisos.cpp  nfe_fazenda_avisos.h  nfe_fazenda_tecnicos.cpp  sped.cpp  sped.h
app/include/services/: api.cpp  slack.cpp
cmake/: CMakeLists.txt
doc/: config.h  config.h.dist
include/: geturl.cpp  geturl.h  helpers.cpp  helpers.h  logger.cpp  logger.h  nf_ebot_api.cpp  nf_ebot_api.h  nfe_ebot_api.cpp  slack.cpp  slack.h
include/parsers/: general.h  nfe_fazenda_avisos.cpp  nfe_fazenda_avisos.h  nfe_fazenda_tecnicos.cpp  nfe_fazenda_tecnicos.h  sped.cpp
include/services/: api.h
includes/: colormod.h  geturl.cpp  geturl.h  helpers.cpp  helpers.h  logger.h  nf_ebot_api.h  nfe_ebot_api.cpp  slack.cpp  slack.h
includes/parsers/: general.h  nfe_fazenda_avisos.cpp  nfe_fazenda_avisos.h
lib/: colormod.h
libs/: CMakeLists.txt  Makefile  cmake_install.cmake  colormod.h  geturl.h
scripts/: cmake_clear.sh  gcc_build.sh
source/: main.cpp
source/libs/: geturl.cpp  helpers.cpp
spike/: Portal da Nota Fiscal Eletrônica.htm  foo.cpp  foo_build.sh  sped.htm  sped_.html
src/: main.cpp
